k8s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: kubecalc-pod

spec:
  containers:
  - name: kubecalc-container
    image: mrsurendar/kubecalc:v1
    ports:
    - containerPort: 80
