k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kubecalc-service

spec:
  type: NodePort

  selector:
    app: kubecalc

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
