k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubecalc-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: kubecalc.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: kubecalc-service

            port:
              number: 80
